# django_social_network

./: .gitignore  README.md
alamnet/: .gitattributes  connect_db.py  manage.py  pyproject.toml
alamnet/alamnet/: asgi.py  settings.py  urls.py  wsgi.py
alamnet/src/: routers.py
alamnet/src/ViewSets/: classes.py  permissions.py  serializers.py
alamnet/src/comments/: models.py
alamnet/src/feed/: apps.py  services.py  urls.py  views.py
alamnet/src/followers/: apps.py  models.py  serializers.py  urls.py  views.py
alamnet/src/profiles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
alamnet/src/wall/: admin.py  models.py  serializers.py  urls.py  views.py
